--- a/modules/nginx/files/nginx.conf
+++ b/modules/nginx/files/nginx.conf
@@ -16,12 +16,11 @@ http {
   tcp_nopush on;
   tcp_nodelay on;
   types_hash_max_size 2048;
-
   keepalive_timeout 65;
-
   charset utf-8;
 
-  # ...
+  # Cope with large image uploads.
+  client_max_body_size 40m;
 
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/upstreams.d/*.conf;
