Abstract out the provisioners.

--- a/bootstrap/user-data/agent.cloud-config.yaml.in
+++ b/bootstrap/user-data/agent.cloud-config.yaml.in
@@ -5,7 +5,7 @@
 apt_update: true
 apt_upgrade: true
 apt_sources:
-  - source: "ppa:brightbox/ruby-ng-experimental"
+  - source: "ppa:brightbox/ruby-ng"
   - filename: puppetlabs.list
     keyid: 4BD6EC30
     source: deb http://apt.puppetlabs.com/ precise main dependencies
@@ -19,17 +19,17 @@ timezone: Europe/London
 # FIXME: Figure out how to manage host roles through something other than the
 # host name. This doesn't feel like a scalable solution.
 hostname: @@NODE_NAME@@
-fqdn: @@NODE_NAME@@.rubaidh.net
+fqdn: @@FQDN@@
 manage_etc_hosts: true
 
 # Refer to the puppet server's internal IP so we can get through the managed
 # ACLs.
 bootcmd:
-  - echo @@PUPPETMASTER_IP@@ puppet.rubaidh.net puppet >> /etc/cloud/templates/hosts.tmpl
+  - echo @@PUPPETMASTER_IP@@ puppet.@@DOMAIN_NAME@@ puppet >> /etc/cloud/templates/hosts.tmpl
 
 puppet:
   conf:
     main:
       pluginsync: true
     agent:
-      server: puppet.rubaidh.net
+      server: puppet.@@DOMAIN_NAME@@
